# altokepe

./: .gitignore  README.md
RECEPCIONISTA-VISTA/: .qmake.stash  AltokepeRecepcionista.pro  Main.cpp  MainWindow.cpp  MainWindow.h  Makefile  Makefile.Debug  Makefile.Release  rankingwindow.cpp  rankingwindow.h
RECEPCIONISTA-VISTA/release/: moc_MainWindow.cpp  moc_rankingwindow.cpp
Ranking/: Ranking.h
clients/cocina/manager_chef/: CMakeLists.txt  main.cpp
clients/cocina/manager_chef/network/: ClienteManagerApp.cpp  ClienteManagerApp.h
clients/cocina/manager_chef/ui/: ColumnaPedidos.cpp  TarjetaPedido.cpp  TarjetaPedido.h  TarjetaPlato.cpp  VentanaManager.cpp  VentanaManager.h
clients/cocina/manager_estacion/: CMakeLists.txt  main.cpp  resources.qrc  styles.qss
clients/cocina/manager_estacion/network/: ClienteEstacionApp.cpp  ClienteEstacionApp.h  ClienteTCP.cpp  ClienteTCP.h
clients/cocina/manager_estacion/ui/: VentanaEstacion.cpp  VentanaEstacion.h  VentanaEstacionesUnificadas.cpp  VentanaEstacionesUnificadas.h
clients/ranking/: CMakeLists.txt  Ranking.cpp  main.cpp  styles.qss
clients/ranking/network/: ClienteRanking.cpp  ClienteRanking.h
clients/ranking/ui/: VentanaRanking.cpp  VentanaRanking.h
clients/recepcionista/: AltokepeRecepcionista.pro  CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.h  rankingwindow.cpp
clients/recepcionista/data/: ArbolBMas.cpp  ArbolBMas.h  GestorPedidos.cpp  GestorPedidos.h  RegistroPedido.h  historial_pedidos.json
clients/recepcionista/facturas/: factura_0001.txt
clients/recepcionista/network/: ClienteRecepcionista.cpp  ClienteRecepcionista.h
clients/recepcionista/ui/: PanelMesas.cpp  PanelPedido.cpp  PanelPedido.h  VentanaRecepcionista.cpp  VentanaRecepcionista.h
common/TratamientoDatos/: CrearMenu.py  GenerarPedidos.py  menu_generado.csv
common/models/: Estados.h  InfoPlatoPrioridad.h  PedidoMesa.h  PlatoDefinicion.h  PlatoInstancia.h
common/network/: Protocolo.h  SerializadorJSON.cpp  SerializadorJSON.h
data/: menu.json
server/: CMakeLists.txt  LogicaNegocio.cpp  LogicaNegocio.h  ManejadorCliente.cpp  ManejadorCliente.h  Servidor.cpp  Servidor.h  estaciones.json  main.cpp  resources.qrc
